--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -194,6 +194,7 @@
         </Popup>
 
         <Border BorderThickness="1" CornerRadius="7" Background="White" BorderBrush="Gray"  >
+           
             <StackPanel Background="White" Margin="5">
 
                 <!--- upper grid -->
@@ -208,7 +209,12 @@
 
                         <!--- hybrid minning -->
 
-                        <Border x:Name="HybridMiningInfoBorder" Grid.Column="0" Padding="5" Margin="5 5 0 0" BorderThickness="1" CornerRadius="8" BorderBrush="Gray"  >
+                        <Border x:Name="HybridMiningInfoBorder" Grid.Column="0" Padding="5" Margin="5 5 0 0" Background="#ffffff" BorderBrush="Black" BorderThickness="1" CornerRadius="10"  >
+
+                            <Border.Effect>
+                                <DropShadowEffect  Direction="-75" ShadowDepth="2" Opacity="0.8" BlurRadius="10" Color="Black" />
+                            </Border.Effect>
+
                             <Grid>
 
                                 <Grid.RowDefinitions>
@@ -341,7 +347,11 @@
                         </Border>
 
                         <!--- balance -->
-                        <Border Grid.Column="1" Padding="5" Margin="3 5 3 0" BorderThickness="1" CornerRadius="8" BorderBrush="Gray"  >
+                        <Border Grid.Column="1" Padding="5" Margin="3 5 3 0" Background="#ffffff" BorderBrush="Black"  >
+
+                            <!--<Border.Effect>
+                                <DropShadowEffect  Direction="-75" ShadowDepth="2" Opacity="0.8" BlurRadius="10" Color="Black" />
+                            </Border.Effect>-->
 
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -360,7 +370,10 @@
                                         </Grid.RowDefinitions>
 
                                         <Border Grid.Row="0" CornerRadius="8">
-                                            <TextBlock  Margin="0,10,0,0" Text="AVAILABLE BALANCE" HorizontalAlignment="Center" FontFamily="Microsoft YaHei" Foreground="#FF9B9B9B" FontSize="13" FontWeight="DemiBold" />
+                                            <TextBlock  Margin="0,10,0,0" Text="AVAILABLE BALANCE" 
+                                                        HorizontalAlignment="Center" FontFamily="Microsoft YaHei" 
+                                                        Foreground="#FF9B9B9B" FontSize="13" 
+                                                        FontWeight="DemiBold" />
                                         </Border>
 
                                         <Border Grid.Row="1" Background="WhiteSmoke" CornerRadius="8" >
@@ -370,7 +383,10 @@
                                         </Border>
 
                                         <Border Grid.Row="2" CornerRadius="8" >
-                                            <TextBlock  x:Name="UnconfirmedBalanceTxt" FontFamily="Microsoft YaHei Light" Foreground="#FF898989" FontSize="10" FontWeight="DemiBold" TextAlignment="Center" />
+                                            <TextBlock  x:Name="UnconfirmedBalanceTxt" 
+                                                        FontFamily="Microsoft YaHei Light" Foreground="#FF898989"
+                                                        FontSize="10" FontWeight="DemiBold" 
+                                                        TextAlignment="Center" />
                                         </Border>
 
 
@@ -387,18 +403,27 @@
                                             <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
 
-                                        <Border Background="WhiteSmoke" Grid.Row="0" Margin=" 0 5" CornerRadius="8">
-                                            <TextBlock  Name="SelsCoinTxt" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" Foreground="Green"  FontSize="15" FontWeight="DemiBold" >
+                                        <Border Background="WhiteSmoke" Grid.Row="0" Margin=" 0 5" 
+                                                CornerRadius="8">
+                                            <TextBlock  Name="SelsCoinTxt" HorizontalAlignment="Center" 
+                                                        FontFamily="Microsoft YaHei Light" Foreground="Green" 
+                                                        FontSize="15" FontWeight="DemiBold" >
                 00.00000000 SELS</TextBlock>
                                         </Border>
 
-                                        <Border Background="WhiteSmoke" Grid.Row="1" Margin=" 0 5" CornerRadius="8">
-                                            <TextBlock  Name="BelsCoinTxt" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" Foreground="Green" FontSize="15" FontWeight="DemiBold" >
+                                        <Border Background="WhiteSmoke" Grid.Row="1" Margin=" 0 5" 
+                                                CornerRadius="8">
+                                            <TextBlock  Name="BelsCoinTxt" HorizontalAlignment="Center" 
+                                                        FontFamily="Microsoft YaHei Light" Foreground="Green" 
+                                                        FontSize="15" FontWeight="DemiBold" >
                 00.00000000 BELS</TextBlock>
                                         </Border>
 
                                         <Border Grid.Row="2"  Margin=" 0 5" CornerRadius="8">
-                                            <Button Content="Import XELS &amp; BELS Address" Click="ImportAddrButton_Click" FontFamily="Microsoft YaHei Light" Foreground="Green" Background="White" BorderBrush="Green" FontSize="13" FontWeight="DemiBold" >
+                                            <Button Content="Import XELS &amp; BELS Address" 
+                                                    Click="ImportAddrButton_Click" FontFamily="Microsoft YaHei 
+                                                    Light" Foreground="Green" Background="White" 
+                                                    BorderBrush="Green" FontSize="13" FontWeight="DemiBold" >
                                                 <Button.Resources>
                                                     <Style TargetType="{x:Type Border}">
                                                         <Setter Property="CornerRadius" Value="2"/>
@@ -445,7 +470,11 @@
                         </Border>
 
                         <!--- pow/pos minning -->
-                        <Border Grid.Column="2" Padding="5" Margin=" 0 5 5 0 " BorderThickness="1" CornerRadius="8" BorderBrush="Gray">
+                        <Border Grid.Column="2" Padding="0" Margin=" 0 5 5 0 " Background="#ffffff" BorderBrush="Black" BorderThickness="1" CornerRadius="10"  >
+
+                            <Border.Effect>
+                                <DropShadowEffect  Direction="-75" ShadowDepth="2" Opacity="0.8" BlurRadius="10" Color="Black" />
+                            </Border.Effect>
 
                             <StackPanel >
                                 <Grid>
