Dashboard Preloader add

--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="900"
       Title="Dashboard" Loaded="Page_Loaded">
@@ -193,10 +194,11 @@
 
             </Grid>
         </Popup>
-
+       
         <Border BorderThickness="1" CornerRadius="7" Background="White" BorderBrush="Gray"  >
+            
             <StackPanel Background="White" Margin="5">
-
+                
                 <!--- upper grid -->
 
                 <StackPanel>
@@ -653,6 +655,7 @@
                         </Border>
 
                         <Border Grid.Row="1" Margin="5">
+                            
                             <Button Content="Go to History" Click="GotoHistoryButton_Click" FontFamily="Microsoft YaHei Light"                                 Foreground="#FF0FD421" Background="White" BorderBrush="#FF30CD3E" FontSize="10" 
                                 HorizontalAlignment="Center">
                                 <Button.Resources>
@@ -661,8 +664,9 @@
                                     </Style>
                                 </Button.Resources>
                             </Button>
+                           
                         </Border>
-
+                        <!--<Image Name="preLoader" Width="70" Height="70" gif:ImageBehavior.AnimatedSource="/Assets/Images/loading-3.gif" Source="/Assets/Images/loading-3.gif" />-->
 
                     </Grid>
 
