node status check remove,dashboard button color check,Exchange page exception handle.

--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -323,7 +323,7 @@
                                             <PasswordBox Grid.Row="0" x:Name="Password" materialDesign:HintAssist.Hint="Enter a wallet password."  materialDesign:HintAssist.IsFloating="False" />
 
                                             <Button Grid.Row="1" x:Name="HybridMinginButton" Content="Unlock" HorizontalAlignment="Center"  Margin="5 5 0 0  " 
-                                Click="StartHybridMiningButton_Click" Foreground="#FF9B9B9B" Background="White" BorderBrush="#FF9B9B9B" >
+                                Click="StartHybridMiningButton_Click" Foreground="green" Background="White" BorderBrush="green" >
                                                 <Button.Resources>
                                                     <Style TargetType="{x:Type Border}">
                                                         <Setter  Property="CornerRadius" Value="2">
@@ -334,7 +334,7 @@
                                         </Grid>
 
                                         <Button Grid.Row="0" x:Name="StopHybridMinginButton"  HorizontalAlignment="Center"  Margin="5 0 " Content="Stop Hybrid Mining" Visibility="Hidden"
-                                Click="StopHybridMiningButton_Click" Foreground="#FF9B9B9B" Background="White" BorderBrush="#FF9B9B9B" />
+                                Click="StopHybridMiningButton_Click" Foreground="Red" Background="White" BorderBrush="Red" />
 
 
 
@@ -559,7 +559,7 @@
                                             <Border Grid.Row="0" x:Name="startButton" CornerRadius="8">
 
                                                 <Button x:Name="PowMiningButton" Content="Start POW Mining" HorizontalAlignment="Center" 
-                                Click="StartPOWMiningButton_Click" Foreground="#FF9B9B9B" Background="White" BorderBrush="#FF9B9B9B"  FontWeight="DemiBold">
+                                                    Click="StartPOWMiningButton_Click" Foreground="Green" Background="White" BorderBrush="Green"  FontWeight="DemiBold">
                                                     <Button.Resources>
                                                         <Style TargetType="{x:Type Border}">
                                                             <Setter Property="CornerRadius" Value="2"/>
@@ -572,7 +572,7 @@
                                             <Border Grid.Row="0" x:Name="stopButton" CornerRadius="8">
 
                                                 <Button Visibility="Hidden" x:Name="StopPowMiningButton" Content="Stop POW Mining" HorizontalAlignment="Center" 
-                                Click="StopPOWMiningButton_Click" Foreground="#FF9B9B9B" Background="White" BorderBrush="#FF9B9B9B"  FontWeight="DemiBold">
+                                                     Click="StopPOWMiningButton_Click" Foreground="Red" Background="White" BorderBrush="Red"  FontWeight="DemiBold">
                                                     <Button.Resources>
                                                         <Style TargetType="{x:Type Border}">
                                                             <Setter Property="CornerRadius" Value="2"/>
@@ -607,7 +607,7 @@
                         <Border Margin="0"  Grid.Row="0" CornerRadius="8">
                             <Grid>
                                 <ListView  x:Name="HistoryListBinding" VerticalContentAlignment="Top"  
-          ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="180"   ScrollViewer.CanContentScroll="False">
+                                ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="180"   ScrollViewer.CanContentScroll="False">
                                     <ListView.View>
                                         <GridView >
                                             <GridViewColumn Width="150" 
